--- a/OurHack/nbproject/project.properties
+++ b/OurHack/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=OurHack
+application.vendor=mclovin
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/OurHack.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.okio-1.13.0.jar=/home/mclovin/Downloads/okio-1.13.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.okhttp.classpath}:\
+    ${file.reference.okio-1.13.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
