--- a/OurHack/nbproject/project.properties
+++ b/OurHack/nbproject/project.properties
@@ -34,7 +34,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.okhttp.classpath}:\
-    ${file.reference.okio-1.13.0.jar}
+    ${file.reference.okio-1.13.0.jar}:\
+    ${libs.junit_4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
