--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ nbdist/
 .nb-gradle/
 nbactions.xml
 project.properties
+OurHack/nbproject/project.properties
 
 # End of https://www.gitignore.io/api/netbeans
 
