--- a/OurHack/nbproject/project.properties
+++ b/OurHack/nbproject/project.properties
@@ -29,13 +29,14 @@ dist.jar=${dist.dir}/OurHack.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.okio-1.13.0.jar=/home/mclovin/Downloads/okio-1.13.0.jar
+file.reference.okhttp-3.9.1.jar=../lib/okhttp-3.9.1.jar
+file.reference.okio-1.13.0.jar=../lib/okio-1.13.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.okhttp.classpath}:\
-    ${file.reference.okio-1.13.0.jar}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.okhttp-3.9.1.jar}:\
+    ${file.reference.okio-1.13.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
