--- a/OurHack/nbproject/project.properties
+++ b/OurHack/nbproject/project.properties
@@ -2,13 +2,18 @@
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
 javac.external.vm=true
 file.reference.okio-1.13.0.jar=../lib/okio-1.13.0.jar
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 javac.target=1.8
 annotation.processing.processors.list=
 javadoc.noindex=false
@@ -40,7 +45,7 @@ junit.selected.version=4
 debug.classpath=${run.classpath}
 run.jvmargs=
 build.generated.dir=${build.dir}/generated
-jar.compress=false
+jar.compress=true
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -56,7 +61,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
 mkdist.disabled=false
 endorsed.classpath=
-javac.classpath=${libs.junit_4.classpath}\:${file.reference.okhttp-3.9.1.jar}\:${file.reference.okio-1.13.0.jar}
+javac.classpath=\
+    ${libs.junit_4.classpath}:\
+    ${file.reference.okhttp-3.9.1.jar}:\
+    ${file.reference.okio-1.13.0.jar}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
